; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_write_http_doc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-engine.c_write_http_doc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@write_http_doc.headers = internal global [128 x i8] c"Expires: Thu, 31 Dec 2037 23:55:55 GMT\0D\0ACache-Control: max-age=315360000\0D\0ALast-Modified: *****************************\0D\0A\00\00\00\00\00\00\00\00", align 16
@ContentTypes = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.connection*, i8*, i32, i32, i32)* @write_http_doc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_http_doc(%struct.connection* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.connection*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %9, align 4
  %12 = call i32 @gen_http_date(i8* getelementptr inbounds ([128 x i8], [128 x i8]* @write_http_doc.headers, i64 0, i64 89), i32 %11)
  %13 = load %struct.connection*, %struct.connection** %6, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32*, i32** @ContentTypes, align 8
  %16 = load i32, i32* %10, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @write_basic_http_header(%struct.connection* %13, i32 200, i32 0, i32 %14, i8* getelementptr inbounds ([128 x i8], [128 x i8]* @write_http_doc.headers, i64 0, i64 0), i32 %19)
  %21 = load %struct.connection*, %struct.connection** %6, align 8
  %22 = getelementptr inbounds %struct.connection, %struct.connection* %21, i32 0, i32 0
  %23 = load i8*, i8** %7, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @write_out(i32* %22, i8* %23, i32 %24)
  ret void
}

declare dso_local i32 @gen_http_date(i8*, i32) #1

declare dso_local i32 @write_basic_http_header(%struct.connection*, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
